--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
   "name": "college-club-registration",
   "version": "1.0.0",
-  "description": "",
+  "description": "A description of your project",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "start": "node index.js", // Start your application with this script
+    "test": "jest", // Run tests with this script
+    "lint": "eslint .", // Run linting with this script
+    "build": "npm run lint && npm run test && npm run build-docker", // Build your application and Docker image
+    "build-docker": "docker build -t your-docker-image-name:latest .", // Build Docker image
+    "deploy": "your-deployment-script.sh" // Deploy your application (replace with your actual deployment script)
   },
   "keywords": [],
-  "author": "",
+  "author": "Your Name",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
     "nodemon": "^3.0.1"
+  },
+  "devDependencies": {
+    "jest": "^27.0.6", // Jest for testing (add other testing dependencies as needed)
+    "eslint": "^7.32.0" // ESLint for linting (add other linting dependencies as needed)
   }
 }
