--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint .", 
     "build": "npm run lint && npm run test && npm run build-docker", 
     "build-docker": "docker build -t your-docker-image-name:latest .", 
-    "deploy": "your-deployment-script.sh" // Deploy your application (replace with your actual deployment script)
+    "deploy": "your-deployment-script.sh" 
   },
   "keywords": [],
   "author": "Your Name",
@@ -19,7 +19,7 @@
     "nodemon": "^3.0.1"
   },
   "devDependencies": {
-    "jest": "^27.0.6", // Jest for testing (add other testing dependencies as needed)
-    "eslint": "^7.32.0" // ESLint for linting (add other linting dependencies as needed)
+    "jest": "^27.0.6", 
+    "eslint": "^7.32.0" 
   }
 }
