--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,32 +1,14 @@
-name: Publish Docker image and Run Tests
+name: CI/CD Workflow
 
 on:
   push:
     branches: ['main']
 
 jobs:
-  build_and_test:
-    name: Build and Test
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out the repo
-        uses: actions/checkout@v3
-      
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14' # Choose an appropriate Node.js version
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Run unit tests
-        run: npm test # Replace with your test command
-
   push_to_registry:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
-    needs: build_and_test
+
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
